Implement clickhouse repositories (#36)
* set up migrations for clickhouse

* implement save method for tokens repo

* implement delete method from tokens repo

* implement queryAll method from tokens repo

* implement sources repo using clickhouse

* implement sources.findbyid

* implement sources.queryAll method

* implement users repo

* event_types repo

* implement filters by action and name

* refactor event types

* fix issue
